--- a/src/styles/_fields.scss
+++ b/src/styles/_fields.scss
@@ -45,7 +45,8 @@ div.ft--theme--FormField--fileupload {
       border-radius: 10px !important;
     }
 
-    label.ft--label {
+    label.ft--label,
+    label.ft--label.ft--shrink {
       font-weight: 600 !important;
       font-size: var(--fontSize__base--sm) !important;
       color: var(--color__neutral--900) !important;
