--- a/src/styles/_fields.scss
+++ b/src/styles/_fields.scss
@@ -29,7 +29,7 @@ label.ft--label.ft--shrink {
   font-size: var(--fontSize__base--sm) !important;
   color: var(--color__neutral--900) !important;
   font-family: var(--fontFamily__base) !important;
-  color: red !important;
+  margin-bottom: 5px !important;
 
   & ~ p.ft-helper-txt {
     &.Mui-error {
