--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -41,6 +41,6 @@ h5 {
 
 p,
 div.ft--theme--Typography--p {
-  margin-bottom: 1rem !important;
+  margin-bottom: 1rem;
   color: var(--color__neutral--800) !important;
 }
