--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -68,8 +68,8 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
     gap: 5px;
     margin-top: 2rem !important;
 
-    div[data-type="Button"]:last-child {
-      margin-left: auto;
+    div[data-type="Button"]:last-of-type {
+      margin-left: auto !important;
     }
   }
 }
