--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -80,7 +80,7 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
   // delete buttons for additional forms
   div#e113,
   div#e114 {
-    position: absolute;
+    position: absolute !important;
     top: 0;
     left: 0;
 
