--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -42,7 +42,10 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
     grid-template-columns: 1fr 1fr;
     gap: 20px;
     position: relative;
-    padding-left: 30px !important;
+    padding: 0 3rem 3rem !important;
+    margin: 2rem auto;
+    border-radius: 10px;
+    border: 1px solid #e3eaf1;
 
     div[data-type="Heading"],
     div[data-type="Subhead"] {
@@ -56,7 +59,10 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
     grid-template-columns: 1fr 1fr;
     gap: 20px;
     position: relative;
-    padding-left: 30px !important;
+    padding: 0 3rem 3rem !important;
+    margin: 2rem auto;
+    border-radius: 10px;
+    border: 1px solid #e3eaf1;
 
     div[data-type="Heading"],
     div[data-type="Subhead"] {
@@ -81,12 +87,22 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
   div#e113,
   div#e114 {
     position: absolute !important;
-    top: 60px;
-    left: 0;
+    top: 95px;
+    right: 34px;
 
     svg {
       height: 32px;
       width: 32px;
+
+      path {
+        fill: var(--color__red--200);
+      }
+
+      &:hover {
+        path {
+          fill: var(--color__red--500);
+        }
+      }
     }
   }
 }
