--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -72,13 +72,13 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
 
   // button group
   div[data-row="row86"] {
-    display: flex;
+    display: flex !important;
     justify-content: space-between;
     flex-direction: row;
     gap: 5px;
     margin-top: 2rem !important;
 
-    div[data-type="Button"]:last-of-type {
+    > div[data-type="Button"]:nth-of-type(3) {
       margin-left: auto !important;
     }
   }
@@ -93,6 +93,7 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
     svg {
       height: 32px;
       width: 32px;
+      cursor: pointer;
 
       path {
         fill: var(--color__red--200);
