Fix red css variable

--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -96,12 +96,12 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
       cursor: pointer;
 
       path {
-        fill: var(--color__red--200) !important;
+        fill: var(--color__secondary-red--200) !important;
       }
 
       &:hover {
         path {
-          fill: var(--color__red--500) !important;
+          fill: var(--color__secondary-red--500) !important;
         }
       }
     }
