Change id to class

--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -78,7 +78,7 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
     gap: 5px;
     margin-top: 2rem !important;
 
-    #ft--pos--e101 {
+    .ft--pos--e101 {
       margin-left: auto !important;
     }
   }
