--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -1,4 +1,12 @@
 div[data-page="63d40c71d124b4071f4af0ba"] {
+  // fix titan mobile crap
+  @media (max-width: 768px) {
+    #s1,
+    .ft--dir--row {
+      max-width: 100% !important;
+    }
+  }
+
   // hide validation borders
   .ft--theme--FormField--text > div,
   .ft--theme--FormField--text > div,
