Reduce mobile padding of additional insurance block

--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -73,6 +73,7 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
 
     @media (max-width: 500px) {
       grid-template-columns: 1fr;
+      padding: 0 1.5rem 1.5rem !important;
     }
 
     div[data-type="Heading"],
