--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,6 +1,6 @@
 // override titan button styles
-.ft--theme--Button--primary:active,
-.ft--theme--Button--secondary:active {
+#e101:active,
+#e106:active {
   border-radius: 6px !important;
   font-family: var(--fontFamily__base) !important;
   font-size: var(--fontSize__base) !important;
