Fix button margin active state

--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -128,7 +128,8 @@ div[data-page="63d40c71d124b4071f4af0ba"] {
       }
     }
 
-    .ft--pos--e101 {
+    .ft--pos--e101,
+    .ft--pos--e101:active {
       margin-left: auto !important;
     }
   }
