--- a/src/styles/_fields.scss
+++ b/src/styles/_fields.scss
@@ -21,6 +21,10 @@ div.ft--theme--FormField-elRoot {
     top: 0 !important;
     right: 10px !important;
   }
+
+  &.Mui-error {
+    border: 1px solid var(--color__red-secondary__300) !important;
+  }
 }
 
 label.ft--label,
@@ -33,7 +37,8 @@ label.ft--label.ft--shrink {
 
   & ~ p.ft-helper-txt {
     &.Mui-error {
-      color: red;
+      font-size: var(--fontSize__base--sm) !important;
+      color: var(--color__red-secondary__500) !important;
     }
   }
 }
