Add validation styles

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,6 +8,7 @@
 @import "./lists";
 @import "./fields";
 @import "./buttons";
+@import "./validation";
 
 // forms
 @import "./forms/submit-insurance";
