--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -33,6 +33,6 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   .ft--theme--Button--primary,
   .ft--theme--Button--primary:active {
     grid-column: span 2;
-    margin-left: auto;
+    margin-left: auto !important;
   }
 }
