--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -29,9 +29,15 @@ div[data-page="63e27e06eed0df7e7d466584"] {
     }
   }
 
-  // step 1 button
+  // step 1 button fix
   div[data-type="Button"].ft--theme--Button--primary,
-  div[data-type="Button"].ft--theme--Button--primary:active {
+  div[data-type="Button"].ft--theme--Button--primary:active,
+  .ftb-resizers.size--fix:active:not(.ft--theme--Section--root):not(
+      .ft--theme--Strip--root
+    ),
+  .ftb-resizers:active:not(.ft--theme--Section--root):not(
+      .ft--theme--Strip--root
+    ) {
     grid-column: span 2 !important;
     margin-left: auto !important;
   }
