--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -44,3 +44,7 @@ div.ft--theme--Typography--p {
   margin-bottom: 1rem;
   color: var(--color__neutral--800) !important;
 }
+
+.ft--Text--base {
+  line-height: 1.6 !important;
+}
