--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -13,9 +13,13 @@ html {
   box-sizing: inherit;
 }
 
+* {
+  font-family: var(--fontFamily__base) !important;
+}
+
 body {
   color: var(--color__neutral--800) !important;
-  line-height: 1.75 !important;
+  line-height: 1.6 !important;
   font-family: var(--fontFamily__base);
   font-weight: 400;
   letter-spacing: -0.01em;
