--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -12,6 +12,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e218,
   #e219,
   #e221,
+  #e223,
   #e224,
   #e225,
   #e226,
@@ -31,6 +32,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e186,
   #e188,
   #e193,
+  #e196,
   #e201,
   #e203,
   #e209,
