--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -43,6 +43,7 @@ p,
 div.ft--theme--Typography--p {
   margin-bottom: 1rem;
   color: var(--color__neutral--800) !important;
+  height: auto !important;
 }
 
 .ft--Text--base {
