--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -11,6 +11,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e18,
   #e218,
   #e219,
+  #e220,
   #e221,
   #e223,
   #e224,
@@ -31,6 +32,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e184,
   #e186,
   #e188,
+  #e190,
   #e193,
   #e196,
   #e201,
