--- a/src/styles/forms/_submit-insurance.scss
+++ b/src/styles/forms/_submit-insurance.scss
@@ -204,4 +204,13 @@ div[data-page="63e1292bc4a96a2711d55320"] {
     font-size: var(--fontSize__base) !important;
     font-weight: 600 !important;
   }
+
+  // validation
+  #e118 {
+    background: var(--color__secondary-red--100);
+    padding: 15px 20px;
+    border-radius: 10px;
+    color: var(--color__secondary-red--900) !important;
+    border: 1px solid var(--color__secondary-red--200);
+  }
 }
