--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -20,7 +20,8 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e226,
   #e227,
   #e228,
-  #e230 {
+  #e230,
+  #e236 {
     display: grid !important;
     grid-template-columns: 1fr 2fr !important;
     column-gap: 70px !important;
