--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,7 @@
 @import "./fields";
 @import "./buttons";
 @import "./validation";
+@import "./address";
 
 // forms
 @import "./forms/submit-insurance";
