--- a/src/styles/_address.scss
+++ b/src/styles/_address.scss
@@ -16,15 +16,15 @@
     }
 
     > div:nth-of-type(3) {
-      grid-column: span 2;
+      grid-column: 1 / 3;
     }
 
     > div:nth-of-type(4) {
-      grid-column: span 1;
+      grid-column: 3 / 4;
     }
 
     > div:nth-of-type(5) {
-      grid-column: span 2;
+      grid-column: 4 / 6;
     }
   }
 }
