--- a/src/styles/_address.scss
+++ b/src/styles/_address.scss
@@ -11,20 +11,22 @@
       font-size: 0.833rem !important;
     }
 
-    > div:nth-of-type(2) {
-      grid-column: span 5;
-    }
+    > div[data-type="Input Fields"] {
+      &:nth-of-type(2) {
+        grid-column: span 5;
+      }
 
-    > div:nth-of-type(3) {
-      grid-column: 1 / 3;
-    }
+      &:nth-of-type(3) {
+        grid-column: 1 / 3;
+      }
 
-    > div:nth-of-type(4) {
-      grid-column: 3 / 4;
-    }
+      &:nth-of-type(4) {
+        grid-column: 3 / 4;
+      }
 
-    > div:nth-of-type(5) {
-      grid-column: 4 / 6;
+      &:nth-of-type(5) {
+        grid-column: 4 / 6;
+      }
     }
   }
 }
