--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -119,7 +119,8 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e203 {
     grid-template-columns: 1fr 1fr;
 
-    div.ft--e85--root {
+    div.ft--e85--root,
+    div.ft--e234--root {
       grid-column: span 2;
     }
   }
