--- a/src/styles/_address.scss
+++ b/src/styles/_address.scss
@@ -1,6 +1,7 @@
 #e234 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 5px;
 
   div[data-type="Paragraph"] {
     grid-column: span 5;
@@ -10,23 +11,23 @@
       color: #102a43 !important;
       font-size: 0.833rem !important;
     }
+  }
 
-    > div[data-type="Input Fields"] {
-      &:nth-of-type(2) {
-        grid-column: span 5;
-      }
+  > div[data-type="Input Fields"] {
+    &:nth-of-type(1) {
+      grid-column: span 5;
+    }
 
-      &:nth-of-type(3) {
-        grid-column: 1 / 3;
-      }
+    &:nth-of-type(2) {
+      grid-column: 1 / 3;
+    }
 
-      &:nth-of-type(4) {
-        grid-column: 3 / 4;
-      }
+    &:nth-of-type(3) {
+      grid-column: 3 / 4;
+    }
 
-      &:nth-of-type(5) {
-        grid-column: 4 / 6;
-      }
+    &:nth-of-type(4) {
+      grid-column: 4 / 6;
     }
   }
 }
