--- a/src/styles/_titan-resets.scss
+++ b/src/styles/_titan-resets.scss
@@ -41,6 +41,6 @@ div[data-type="Subhead"] {
 }
 
 // remove min height on select (and others?)
-.ft--theme--FormField--select .inputRoot {
-  height: auto !important;
-}
+// .ft--theme--FormField--select .inputRoot {
+//   height: auto !important;
+// }
