--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -169,4 +169,43 @@ div[data-page="63e27e06eed0df7e7d466584"] {
       margin-top: 36px !important;
     }
   }
+
+  // address fields
+  #e234,
+  #e239,
+  #e241 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 5px;
+    grid-column: span 2;
+
+    div[data-type="Paragraph"] {
+      grid-column: span 5;
+      margin: 0;
+
+      div {
+        font-weight: 600;
+        color: #102a43 !important;
+        font-size: 0.833rem !important;
+      }
+    }
+
+    > div[data-type="Input Fields"] {
+      &:nth-of-type(3) {
+        grid-column: span 5;
+      }
+
+      &:nth-of-type(5) {
+        grid-column: 1 / 3;
+      }
+
+      &:nth-of-type(7) {
+        grid-column: 3 / 4;
+      }
+
+      &:nth-of-type(9) {
+        grid-column: 4 / 6;
+      }
+    }
+  }
 }
