--- a/src/styles/_fields.scss
+++ b/src/styles/_fields.scss
@@ -15,7 +15,7 @@ div.ft--theme--FormField-elRoot {
   border-radius: 6px !important;
   background: var(--color__neutral--100) !important;
   font-size: var(--fontSize__base--sm) !important;
-  padding: 0 20px !important;
+  padding: 10px 20px !important;
   width: 100% !important;
   outline: 0 !important;
 
@@ -26,6 +26,7 @@ div.ft--theme--FormField-elRoot {
   &:not(.ft--theme--FormField--textarea-form-control) {
     height: 48px !important;
     line-height: 48px !important;
+    padding: 0 20px !important;
   }
 
   &[aria-invalid="true"] {
