--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -102,7 +102,8 @@ div[data-page="63e27e06eed0df7e7d466584"] {
     div.ft--e46--root,
     div.ft--e57--root,
     div.ft--e70--root,
-    div.ft--e80--root {
+    div.ft--e80--root,
+    div.ft--e233--root {
       grid-column: span 2;
     }
   }
@@ -136,7 +137,8 @@ div[data-page="63e27e06eed0df7e7d466584"] {
     grid-template-columns: 1fr 1fr;
 
     div.ft--e80--root,
-    div.ft--e175--root {
+    div.ft--e175--root,
+    div.ft--e244--root {
       grid-column: span 2;
     }
   }
