--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -103,7 +103,8 @@ div[data-page="63e27e06eed0df7e7d466584"] {
     div.ft--e57--root,
     div.ft--e70--root,
     div.ft--e80--root,
-    div.ft--e233--root {
+    div.ft--e233--root,
+    div.ft--e243--root {
       grid-column: span 2;
     }
   }
@@ -138,7 +139,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
 
     div.ft--e80--root,
     div.ft--e175--root,
-    div.ft--e243--root {
+    div.ft--e244--root {
       grid-column: span 2;
     }
   }
