--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -43,7 +43,8 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e207,
   #e209,
   #e211,
-  #e214 {
+  #e214,
+  #e238 {
     display: grid;
     row-gap: 20px;
     column-gap: 10px;
